externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sonarqube
  namespace: default
spec:
  externalName: sonarqube-sonarqube.sonarqube.svc.cluster.local
  type: ExternalName
