jenkins-ExternalName.yaml
## PORT => 8080

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jenkins
  namespace: default
spec:
  externalName: jenkins.jenkins.svc.cluster.local
  type: ExternalName
