postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql
  name: sonarqube-postgresql
  namespace: sonarqube
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
      targetPort: tcp-postgresql
  selector:
    app: postgresql
  type: ClusterIP
