postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
  name: sonarqube-postgresql
  namespace: sonarqube
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/name: postgresql
    role: primary
  type: ClusterIP
