prometheus-ExternalName.yaml
## PORT => 9000

apiVersion: v1
kind: Service
metadata:
  name: prometheus-prometheus
  namespace: default
spec:
  externalName: grafana.monitoring.svc.cluster.local
  type: ExternalName
