sonarqube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube-sonarqube
  namespace: sonarqube
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app: sonarqube
  type: ClusterIP
